corrects overlap between links and social-media

--- a/it161/fp/css/main.css
+++ b/it161/fp/css/main.css
@@ -756,7 +756,7 @@ footer {
 
       /* restore vertical link cards, but arrange them in a single column */
       .links {
-        height: 1322px;
+        height: 1370px;
     }
 
     .link-grid {  
